--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "content_scripts": [
     {
       "matches": ["http://localhost:9003/devtool/*"],
-      "js": ["src/changeStyle.js"]
+      "js": ["src/index.js", "src/changeStyle.js"]
     }
   ],
   "web_accessible_resources": [
