feat: 🎸 Update match port to *

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "permissions": ["activeTab"],
   "content_scripts": [
     {
-      "matches": ["http://localhost:9003/devtool/*"],
+      "matches": ["http://localhost:*/devtool/*"],
       "js": ["src/index.js", "src/changeStyle.js"]
     }
   ],
