chore: 🤖 Update url to match new version devtool

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "permissions": ["activeTab"],
   "content_scripts": [
     {
-      "matches": ["http://localhost:*/devtool/*"],
+      "matches": ["http://*:*/devtool/*"],
       "js": ["src/index.js", "src/changeStyle.js"]
     }
   ],
