--- a/manifest.json
+++ b/manifest.json
@@ -4,24 +4,20 @@
   "version": "0.0.1",
   "description": "A Chrome extension for enhancing the thresh devtool function.",
   "permissions": ["activeTab"],
+  "background": {
+    "service_worker": "src/background.js"
+  },
+  "host_permissions": ["<all_urls>"],
   "content_scripts": [
     {
       "matches": ["http://*:*/devtool/*"],
-      "js": ["src/content-scripts/threshDevtool/index.js"]
+      "js": ["src/content-scripts/threshDevtool/index.js"],
+      "css": ["src/content-scripts/threshDevtool/style.css"]
     },
     {
       "matches": ["https://dmpt.amh-group.com/*"],
-      "js": ["src/content-scripts/dmptNotify/index.js"]
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "matches": ["<all_urls>"],
-      "resources": ["src/content-scripts/threshDevtool/style.css"]
-    },
-    {
-      "matches": ["https://dmpt.amh-group.com/*"],
-      "resources": ["src/content-scripts/dmptNotify/style.css"]
+      "js": ["src/content-scripts/dmptNotify/index.js"],
+      "css": ["src/content-scripts/dmptNotify/style.css"]
     }
   ],
   "icons": {
