--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "description": "A Chrome extension for enhancing the 🧱 ecology functions.",
   "permissions": ["activeTab"],
+  "action": {
+    "default_popup": "src/popup/index.html",
+    "default_icon": "src/assets/icon128.png"
+  },
   "background": {
     "service_worker": "src/background.js"
   },
